Trying to fix spacing issue

--- a/css/home.css
+++ b/css/home.css
@@ -93,6 +93,29 @@ body {
   display: none;
 }
 
+.row {
+  margin-top: 2em;
+  background-color: aqua;
+}
+
+.col {
+  /* background-color: antiquewhite; */
+  background-color: aquamarine;
+  border: 1em;
+  border-color: black;
+  
+  /* font-size: 62px; */
+}
+
+.col .intro {
+  height: fit-content;
+  justify-content: center;
+  align-items: center;
+  font-size: 60px;
+  margin-top: 50%;
+  margin-bottom: 50%;
+  background-color: antiquewhite;
+}
 
 /* creating the animations for the text when the webpage loads */
 @-webkit-keyframes fadeAnimation {
@@ -144,7 +167,7 @@ body {
   }
   #jumpBook {
     height: 150px;
-    transform: rotate(30deg) translate(-90px, 80px) scale(.85);
+    transform: translate(-90px, 80px) scale(.85);
     display: inline-block;
     margin-top: 150px;
     position: absolute;
@@ -169,7 +192,7 @@ body {
   }
   #jumpBook {
     height: 150px;
-    transform: rotate(30deg) translate(-100px, 50px) scale(.65);
+    transform: translate(-100px, 50px) scale(.65);
     display: inline-block;
     margin-top: 150px;
     position: absolute;
@@ -199,7 +222,7 @@ body {
   }
   #jumpBook {
     height: 150px;
-    transform: rotate(30deg) translate(-90px, 20px) scale(.5);
+    transform: translate(-90px, 20px) scale(.5);
     display: inline-block;
     margin-top: 150px;
     position: absolute;
